# DaytradeBoat

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  deploy-gcp.sh  entrypoint.sh  pyproject.toml  retrain-model.sh
data/journal/: journal.db
data/journal/events/: 2026-05-14.jsonl  2026-05-15.jsonl
docs/: WARRIOR_IGNITION.md  paper-test-runbook.md  tick-entry-plan.md
scripts/: dump_live_entry.sh  news_cont_ab.py  retrain_ignition_model.py
src/daytrading/: __init__.py  __main__.py  config.py  market_calendar.py  models.py  runner.py
src/daytrading/analyst/: collector.py
tests/: conftest.py  test_alpaca_feed_network.py  test_alpaca_integration.py  test_backtest.py  test_backtest_sweep.py  test_bar_aggregator.py  test_breakeven.py  test_classifier.py  test_daily_session_reset.py  test_dashboard_analytics_report.py  test_dashboard_backtest.py  test_dashboard_cycle_heartbeat.py  test_dashboard_scorecard.py  test_entry_executor.py  test_entry_guard.py  test_entry_policy.py  test_execution_timer.py  test_fast_exit_safety.py  test_float_store.py  test_former_momo_scanner.py  test_guards.py  test_hod_alert_logic.py  test_hod_alert_store.py  test_hod_momentum.py  test_hod_pool_refresh.py  test_hod_prior_day.py  test_hod_seed_batching.py  test_hod_tick_tracker.py  test_hod_watchlist_sync.py  test_indicators.py  test_journal.py  test_journal_replay.py  test_live_prices.py  test_llm_strategy_advisor.py  test_market_calendar.py  test_market_data_service.py  test_missed_a_plus.py  test_ml_data_collector.py  test_ml_monitor.py  test_momentum_patterns.py  (+27 more)
(+112 files in other folders)
