[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daytrading"
version = "0.1.0"
description = "Day trading algorithm platform: strategies, backtests, execution"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=0.19",
    "flask>=2.0,<3.1",
    "werkzeug>=2.0,<3.1",
]

[project.optional-dependencies]
data = [
    "numpy>=1.24",
    "pandas>=2.0",
]
alpaca = [
    "alpaca-py>=0.30",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
